--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
               <span>#jQuery</span>
             </p>
             <div class="project_link">
-              <a href="https://opsbakery2.netlify.app/">site</a>
-              <a href="https://www.notion.so/OPS-22af6e3100788024bb57f1bab335ba62?source=copy_link">review</a>
+              <a href="https://opsbakery2.netlify.app/" target="_blank">site</a>
+              <a href="https://www.notion.so/OPS-22af6e3100788024bb57f1bab335ba62?source=copy_link" target="_blank">review</a>
             </div>
           </div>
         </div>
@@ -90,8 +90,8 @@
               <span>#jQuery</span>
             </p>
             <div class="project_link">
-              <a href="havehad.netlify.app">site</a>
-              <a href="https://www.notion.so/Havehad-22af6e310078804fb264d06cc3bf9ac8?source=copy_link">review</a>
+              <a href="havehad.netlify.app" target="_blank">site</a>
+              <a href="https://www.notion.so/Havehad-22af6e310078804fb264d06cc3bf9ac8?source=copy_link" target="_blank">review</a>
             </div>
           </div>
         </div>
@@ -110,8 +110,8 @@
               <span>#jQuery</span>
             </p>
             <div class="project_link">
-              <a href="#">site</a>
-              <a href="https://www.notion.so/22af6e31007880a59368fcf0025940c5?source=copy_link">review</a>
+              <a href="#" target="_blank">site</a>
+              <a href="https://www.notion.so/22af6e31007880a59368fcf0025940c5?source=copy_link" target="_blank">review</a>
             </div>
           </div>
         </div>
@@ -130,8 +130,8 @@
               <span>#jQuery</span>
             </p>
             <div class="project_link">
-              <a href="https://jkakaopay.netlify.app/">site</a>
-              <a href="https://www.notion.so/kakaopay-22af6e31007880be8630fe089b383f12?source=copy_link">review</a>
+              <a href="https://jkakaopay.netlify.app/" target="_blank">site</a>
+              <a href="https://www.notion.so/kakaopay-22af6e31007880be8630fe089b383f12?source=copy_link" target="_blank">review</a>
             </div>
           </div>
         </div>
@@ -142,7 +142,7 @@
         <div class="list_title">
           <h2>PORTFOLIO</h2>
         </div>
-        <a href="https://www.notion.so/moneffe-22af6e31007880d3b667fe90b4b372b2?source=copy_link" class="list">
+        <a href="https://www.notion.so/moneffe-22af6e31007880d3b667fe90b4b372b2?source=copy_link" target="_blank" class="list" >
           <img class="fade" src="assets/images/index/moneffe_logo.png" alt="모네프">
           <h3>moneffe</h3>
           <p class="tag">
@@ -151,7 +151,7 @@
             <span>#CSS</span>
           </p>
         </a>
-        <a href="https://www.notion.so/22af6e31007880f3845cd0c47fbe3579?source=copy_link" class="list">
+        <a href="https://www.notion.so/22af6e31007880f3845cd0c47fbe3579?source=copy_link" target="_blank" class="list">
           <img class="fade" src="assets/images/index/siff_logo.png" alt="서울독립영화제">
           <h3>서울 독립 영화제</h3>
           <p class="tag">
@@ -163,6 +163,58 @@
         </a>
       </div>
     </section>
+    <!-- <section id="ui_sec">
+      <div class="ui_wrap">
+        <div class="ui_title">
+          <h2>UIUX DESIGN</h2>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="ui_list">
+          <div class="ui_box">
+            <div class="ui_img">
+              <img src="assets/images/index/flo_mockup.png" alt="flo">
+            </div>
+            <div class="ui_text">
+              <h3>Flo</h3>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <a href="#">figma</a>
+            <a href="#"></a>
+          </div>
+          <div class="ui_box">
+            <div class="ui_img"></div>
+            <div class="ui_text">
+              <h3>agoda</h3>
+              <p>
+                <span>#figma</span>
+                <span>#모바일웹</span>
+                <span>#웹기획</span>
+              </p>
+            </div>
+            <a href="#"></a>
+            <a href="#"></a>
+          </div>
+          <div class="ui_box">
+            <div class="ui_img"></div>
+            <div class="ui_text">
+              <h3>agoda</h3>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <a href="#"></a>
+            <a href="#"></a>
+          </div>
+          <div class="ui_box">
+            <div class="ui_img"></div>
+            <div class="ui_text">
+              <h3>agoda</h3>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <a href="#"></a>
+            <a href="#"></a>
+          </div>
+        </div>
+      </div>
+    </section> -->
     <section id="contact_sec">
       <div class="contact_wrap">
         <div class="contact_title">
@@ -189,6 +241,10 @@
           <p class="ani y_Bottom delay03">
             웹 퍼블리싱 관련 문의, 프로젝트 협업 제안, 또는 기타 궁금한 사항이 있으시면 이메일을 통해 연락 주시기 바랍니다.<br />소중한 의견에 신속하고 정확하게 답변드리겠습니다.
           </p>
+          <div class="contact_link">
+            <a href="https://github.com/jw970625" target="_blank"><img src="assets/images/ui/git_icon.svg" alt="github이동"> GitHub</a>
+            <a href="https://www.notion.so/Portfolio-1e3f6e310078806d8e4dc1ad8e62c591" target="_blank"><img src="assets/images/ui/notion_icon.svg" alt=""> Notion</a>
+          </div>
         </div>
       </div>
     </section>
