--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="project_sec">
       <div class="sec project01">
         <div class="project_box">
-          <video src="assets/images/index/ops_media.mp4" autoplay="autoplay" muted="muted" loop></video>
+          <video src="assets/images/index/ops_media.mp4" autoplay="autoplay" muted="muted" playsinline loop></video>
           <div class="project_title">
             <h2>OPS</h2>
             <p>
@@ -79,7 +79,7 @@
       </div>
       <div class="sec project02">
         <div class="project_box">
-          <video src="assets/images/index/havehad_media.mp4" autoplay="autoplay" muted="muted" loop></video>
+          <video src="assets/images/index/havehad_media.mp4" autoplay="autoplay" muted="muted" playsinline loop></video>
           <div class="project_title">
             <h2>Havehad</h2>
             <p>
@@ -98,7 +98,7 @@
       </div>
       <div class="sec project03">
         <div class="project_box">
-          <video src="assets/images/index/mmca_media.mp4" autoplay="autoplay" muted="muted" loop></video>
+          <video src="assets/images/index/mmca_media.mp4" autoplay="autoplay" muted="muted" playsinline loop></video>
           <div class="project_title">
             <h2>MMCA</h2>
             <p>
@@ -118,7 +118,7 @@
       </div>
       <div class="sec project04">
         <div class="project_box">
-          <video src="assets/images/index/kakao_media.mp4" autoplay="autoplay" muted="muted" loop></video>
+          <video src="assets/images/index/kakao_media.mp4" autoplay="autoplay" muted="muted" playsinline loop></video>
           <div class="project_title">
             <h2>kakao<b>pay</b></h2>
             <p>
