--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <span>#jQuery</span>
             </p>
             <div class="project_link">
-              <a href="havehad.netlify.app" target="_blank">site</a>
+              <a href="https://havehad.netlify.app/" target="_blank">site</a>
               <a href="https://www.notion.so/Havehad-22af6e310078804fb264d06cc3bf9ac8?source=copy_link" target="_blank">review</a>
             </div>
           </div>
