notion 도메인 주소 변경

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           </p>
           <div class="contact_link">
             <a href="https://github.com/jw970625" target="_blank"><img src="assets/images/ui/git_icon.svg" alt="github이동"> GitHub</a>
-            <a href="https://www.notion.so/Portfolio-1e3f6e310078806d8e4dc1ad8e62c591" target="_blank"><img src="assets/images/ui/notion_icon.svg" alt=""> Notion</a>
+            <a href="https://nervous-hip-e8a.notion.site/Portfolio-1e3f6e310078806d8e4dc1ad8e62c591?source=copy_link" target="_blank"><img src="assets/images/ui/notion_icon.svg" alt=""> Notion</a>
           </div>
         </div>
       </div>
