--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <span>#jQuery</span>
             </p>
             <div class="project_link">
-              <a href="#" target="_blank">site</a>
+              <a href="https://beepick.netlify.app/" target="_blank">site</a>
               <a href="https://www.notion.so/22af6e31007880a59368fcf0025940c5?source=copy_link" target="_blank">review</a>
             </div>
           </div>
